EoD commit: switch to laptop

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 
 <body>
+    <h1 id="page-title">The DOM</h1>
+
     <div>
-        <p>Lorem, ipsum dolor.</p>
+        <a href="http://www.google.com" target="blank">Search link</a>
         <p>Lorem ipsum dolor sit amet.</p>
         <p class="error">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
 
-    <div class="error">Lorem ipsum dolor sit amet.</div>
+    <div class="content">
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
