rutine commit berfore push

--- a/index.html
+++ b/index.html
@@ -10,17 +10,29 @@
 </head>
 
 <body>
-    <h1 id="page-title">The DOM</h1>
+    <h1 class="title">The DOM</h1>
 
-    <div>
+    <!-- <div>
         <a href="http://www.google.com" target="blank">Search link</a>
         <p>Lorem ipsum dolor sit amet.</p>
-        <p class="error">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div> -->
+
+    <div>
+        <p>Lorem error dolor sit amet.</p>
+        <p>Rem illo nihil enim provident?</p>
+        <p>Repellat success tempore maxime id?</p>
+        <p>A at molestias pariatur quos.</p>
+        <p>Enim, fugiat! error, consequatur culpa!</p>
+        <p>Adipisci quod success repellat minima?</p>
+        <p>Ab fuga voluptates optio perferendis?</p>
+        <p>Libero blanditiis error vitae autem!</p>
+        <p>Aliquam success expedita rerum vitae.</p>
     </div>
 
-    <div class="content">
+    <section class="content">
         <p>Lorem ipsum dolor sit amet.</p>
-    </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
